--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -43,14 +43,14 @@ ul, li {
     }
 
     .desc-image {
-        width: 40%;
+        width: 300px;
     }
 
     .section-title {
-        font-size: 5vw;
+        font-size: 2.8rem;
         font-weight: 700;
         color: $title-color;
-        padding: 1%;
+        padding: .5em;
         letter-spacing: 1.5px;
 
         span {
@@ -59,11 +59,12 @@ ul, li {
     }
 
     .section-desc {
-        font-size: 2.3vw;
+        font-size: 1.1rem;
         color: $p-color;
         width: 70%;
         line-height: 32px;
-        padding: 1%;
+        padding: 1em;
+        text-align: center;
     }
     
     .home {
@@ -76,7 +77,7 @@ ul, li {
 
         .navbar {
             .logo {
-                font-size: 7vw;
+                font-size: 2.5rem;
                 font-weight: 700;
                 color: #fff;
             }
@@ -90,14 +91,14 @@ ul, li {
             .home-content {
                 .home-title {
                     h1 {
-                        font-size: 10vw;
+                        font-size: 5rem;
                         color: #fff;
                         font-weight: 700;
-                        padding: 30px;
+                        padding: 15px;
                     }
 
                     h2 {
-                        font-size: 3vw;
+                        font-size: 1.5rem;
                         color: #fff;
                     }
                 }
@@ -106,31 +107,250 @@ ul, li {
             .home-image {
                 padding-top: 50px;
                 img {
-                    width: 50%;
+                    width: 300px;
                 }
             }
         }
     }
 
     .message {
-        height: 100vh;
+        text-align: center;
+    
+        .message-wrapper {
+            margin-top: 100px;
+            margin-bottom: 100px;
+            
+            .message-wrapper__img {
+                position: relative;
+                padding-bottom: 50px;
+        
+
+                img {
+                    &:nth-child(2) {
+                        position: absolute;
+                        left: 40%;
+                        top: 20%;
+                    }
+                }
+            }
+
+
+            .message-content {
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                align-items: center;
+            }
+        }
+    }
+
+    .touch {
+        text-align: center;
+    
+        .touch-wrapper {
+            margin-top: 100px;
+            margin-bottom: 100px;
+            
+            .touch-wrapper__img {
+                position: relative;
+                padding-bottom: 50px;
+
+                img {
+                    &:nth-child(2) {
+                        position: absolute;
+                        left: 40%;
+                        top: 20%;
+                    }
+                }
+            }
+
+            .touch-content {
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                align-items: center;
+            }
+        }
+    }
+
+    .review {
+        text-align: center;
+        min-height: 120vh;
+    
+        .review-wrapper {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+            .speech {
+                padding-top: 3%;
+                padding-bottom: 5%;
+
+                .speech-bubble {
+                    border: 1px solid #e0e0e0;
+                    width: 300px;
+                    height: 250px;
+            
+                    p {
+                        color: $p-color;
+                        word-wrap: break-word;
+                        text-align: left;
+                        line-height: 32px;
+                        font-size: 0.9rem;
+                        padding: 2% 15% 3% 8%;
+                    }
+            
+                    h3 {
+                        color: $base-color;
+                        text-align: left;
+                        font-size: 1.1rem;
+                        padding: 0 8% 5%;
+                    }
+            
+                    &:hover {
+                        animation: speech_box_up .5s ease forwards;
+                        box-shadow: 5px 10px 18px #888888;
+                    }
+                }
+            
+                .speech-profile {
+                    margin-top: 3%;
+                    display: flex;
+                    justify-content: center;
+            
+                    img {
+                        width: 20%;
+                        border-radius: 50px;
+                    }
+            
+                    .speech-profile__detail {
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        padding-left: 3%;
+                    }
+                }
+            }
+        }
+    }
+
+    .description {
+        background-image: linear-gradient(to top, #eb402c, #d90647);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+
+        .description-wrapper {
+            display: flex;
+            margin-right: 30px;
+            margin-lefT: 30px;
+
+            img {
+                width: 300px;
+            }
+
+            .description-items {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+
+               .description-item {
+                    padding-top: 1em;
+                    padding-bottom: 1em;
+                    color: white;
+                    
+                    img { 
+                        width: 35px;
+                    }
+
+                    h1 {
+                        font-size: 1.8rem;
+                        padding: 10px;
+                    }
+
+                    p {
+                        font-size: 0.9rem;
+                        padding: 5px;
+                    }
+               }
+            }
+        }
+    }
+
+    .subscription {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         text-align: center;
-    
-        .message-wrapper {
-            margin-top: 100px;
+
+        p {
+            font-size: 1.2rem;
+            padding: 10px 30px 10px;
+            color: $p-color;
+        }
+
+        form {
             position: relative;
 
-            img {
-                &:nth-child(2) {
-                    position: absolute;
-                    left: 40%;
-                    top: 20%;
+            input {
+                &:first-child {
+                    margin-top: 20px;
+                    width: 430px;
+                    height: 50px;
+                    border: transparent;
+                    background-color: #f0f0f0;
+                    border-radius: 50px;
+                }
+
+                &::placeholder {
+                    font-size: .9rem;
+                    padding-left: 30px;
                 }
             }
+
+            a { 
+                position: absolute;
+                right: -20%;
+                top: 31%;
+                background-image: linear-gradient(to top, #eb402c, #d90647);
+                font-size: 1.2rem;
+                padding: 12px 50px;
+                border-radius: 50px;
+                color: #fff;
+            }
         }
+    }
+
+    .download {
+        .appicon {
+            width: 300px;
+        }
+
+        p {
+            font-size: 1.2rem;
+            color: $p-color;
+            margin-left: 30px;
+            margin-right: 30px;
+        }
+
+        .applestore {
+            margin-top: 50px;
+            width: 200px;
+        }
+    }
+}
+
+@keyframes speech_box_up {
+    0% {
+        transform: translateY(0);
+    }
+
+    100% {
+        transform: translateY(-2vh);
     }
 }
